--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
       elit.  Dicta explicabo debitis omnis dolor iste fugit
       totam quasi inventore!</p>
   </section>
-
-
-
-
-
-
+ <div class="line"></div>
+ <div class="line2"></div>
+ <div class="triangle-right"></div>
+ <div class="triangle-right2"></div>
+ <div class="triangle-left"></div>
 </body>
 
 </html>
