--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
  <div class="triangle-right"></div>
  <div class="triangle-right2"></div>
  <div class="triangle-left"></div>
+ <div class="circle"></div>
+ <div class="circle2"></div>
+ <div class="circle3"></div>
+<
 </body>
 
 </html>
